<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="@color/colorFondoAplicacion"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@color/colorFondoCabecera"
        android:baselineAligned="false"
        android:elevation="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/ivLogo"
            android:src="@mipmap/ic_launcher"
            android:padding="25dp"
            android:layout_weight="3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/tvTituloAplicacion"
            android:gravity="center_horizontal"
            android:textColor="@color/colorTextoBlanco"
            android:textStyle="bold"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:padding="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorFondoFormulario"
            android:elevation="5dp"
            android:focusable="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etUsuario"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@mipmap/ic_usuario"
                android:layout_marginTop="30dp"
                android:hint="@string/strUsuario"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etClave"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@mipmap/ic_clave"
                android:hint="@string/strClave"
                android:password="false"
                android:inputType="textPassword"
                android:drawablePadding="5dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strLogin"
                android:id="@+id/bIngresar"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@mipmap/ic_login"
                android:layout_marginTop="40dp"
                android:onClick="getEmpresas" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorFondoPie"
        android:elevation="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/strPie"
            android:id="@+id/tvTextoPie"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/colorTextoBlanco"
            android:textStyle="bold"
            android:textSize="20dp" />
    </LinearLayout>
</LinearLayout>