<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginBottom="5dp"
    android:padding="5dp"
    android:background="@drawable/border_listview_row">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strRemesa"
            android:textSize="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

        <TextView
            android:layout_marginLeft="20dp"
            android:id="@+id/lvremesa_tvRemesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strPeso"
            android:textSize="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

        <TextView
            android:layout_marginLeft="20dp"
            android:id="@+id/lvremesa_tvpeso"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCantidad"
            android:textSize="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

        <TextView
            android:layout_marginLeft="20dp"
            android:id="@+id/lvremesa_tvcantidad"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strRegionalDestino"
            android:textSize="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

        <TextView
            android:layout_marginLeft="20dp"
            android:id="@+id/lvremesa_tvregionaldestino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>
    </LinearLayout>


</LinearLayout>
