<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <include layout="@layout/activity_title_bar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/colorFondoCabecera"
        android:elevation="10dp"
        android:weightSum="1"
        android:layout_weight="0.19">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_cumplir_ordencargue"
            android:textColor="@color/colorTextoBlanco"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:elevation="10dp"
            android:layout_weight="0.70" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCumplirOrdenCargue"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tvOrdenCargue"
            android:text="Orden Cargue:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tpmEtiqueta"
            android:textSize="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/tvRemesa"
            android:text="@string/strRemesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tpmEtiqueta"
            android:textSize="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1" >

            <EditText
                android:id="@+id/etRemesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:layout_gravity="left"
                android:layout_marginRight="80dp" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="44dp"
                android:layout_gravity="right"
                android:background="@android:drawable/ic_menu_camera"
                android:layout_marginRight="0dp"
                android:onClick="escanearCodigoDeBarras"
                android:id="@+id/ivEscanear" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvPeso"
                android:text="@string/strPeso"
                android:layout_height="wrap_content"
                style="@style/tpmEtiqueta"
                android:textSize="20dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="63dp"
                android:layout_weight="0.48"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/tvCantidad"
                android:text="@string/strCantidad"
                android:layout_height="wrap_content"
                style="@style/tpmEtiqueta"
                android:textSize="20dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="63dp"
                android:layout_weight="0.51" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etPeso"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_weight="1"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/etCantidad"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvRegionalDestino"
            android:text="@string/strRegionalDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tpmEtiqueta"
            android:textSize="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spRegionalDestino"
            android:layout_width="match_parent"
            android:layout_height="34dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btnAdicionarCumplido"
            android:text="Adicionar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/ButtonCS"
            android:background="@drawable/cbuttonblue"
            android:layout_marginRight="1.5dp"
            android:onClick="AdicionarRemesa" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvRemesas"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.84" />

    <LinearLayout
        android:id="@+id/llBotonesCumplirOrdenCargue"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btnGuardarCumplido"
            android:text="Guardar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/ButtonCS"
            android:background="@drawable/cbuttonblue"
            android:layout_marginRight="1.5dp" />

        <Button
            android:id="@+id/btnCancelarCumplido"
            android:text="Cancelar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/ButtonCS"
            android:background="@drawable/cbuttonblue"
            android:layout_marginRight="1.5dp"
            android:onClick="cancelarCumplido" />
    </LinearLayout>
</LinearLayout>